--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height"
     android:layout_margin="@dimen/margin_s"
-    app:cardCornerRadius="@dimen/item_corner_radius">
+    app:cardCornerRadius="@dimen/item_corner_radius"
+    app:cardElevation="@dimen/margin_l">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,6 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_m"
             android:padding="@dimen/margin_s"
+            android:layout_marginStart="@dimen/margin_s"
+            android:ellipsize="end"
             android:textSize="@dimen/text_size_l"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -30,6 +33,8 @@
             android:id="@+id/short_description_textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_s"
+            android:ellipsize="end"
             android:layout_marginTop="@dimen/margin_m"
             android:padding="@dimen/margin_s"
             android:textSize="@dimen/text_size_m"
@@ -42,8 +47,8 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -52,12 +57,14 @@
 
         <TextView
             android:id="@+id/author_textView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_s"
+            android:layout_marginEnd="@dimen/margin_m"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:padding="@dimen/margin_s"
             android:textSize="@dimen/text_size_s"
-            android:maxLines="1"
-            android:layout_marginEnd="@dimen/margin_m"
             app:layout_constraintBottom_toTopOf="@+id/time_textView"
             app:layout_constraintEnd_toStartOf="@+id/bookmark_button"
             app:layout_constraintHorizontal_bias="0.0"
@@ -69,6 +76,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size_s"
+            android:layout_marginStart="@dimen/margin_s"
+            android:layout_marginBottom="@dimen/margin_s"
             android:padding="@dimen/margin_s"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
