--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,6 @@
 
     <item
         android:id="@+id/navigation_favourites"
-        android:icon="@drawable/ic_favourite"
+        android:icon="@drawable/ic_bookmark_added"
         android:title="@string/title_tab_favourites" />
 </menu>
