--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="shimmer_color">#dddddd</color>
+    <color name="transparent">#00000000</color>
+
 </resources>
