--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="gray">#404040</color>
     <color name="shimmer_color">#dddddd</color>
     <color name="transparent">#00000000</color>
 
