--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -91,8 +91,7 @@
             android:layout_margin="@dimen/margin_m"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:srcCompat="@drawable/ic_bookmark_add"
-            app:tint="@color/black" />
+            app:srcCompat="@drawable/ic_bookmark_add" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
