--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,4 +14,9 @@
         android:id="@+id/navigation_saved"
         android:icon="@drawable/ic_bookmark_added"
         android:title="@string/title_tab_saved" />
+
+    <item
+        android:id="@+id/navigation_settings"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/title_tab_settings" />
 </menu>
